# trmnl-custom-app

./: .gitignore  .trmnlp.yml  ARCHITECTURE.md  README.md  pyproject.toml
app/: main.py  slots.py
docs/: future-features.md
src/: .gitkeep  full.liquid  half_horizontal.liquid  half_vertical.liquid  quadrant.liquid  settings.yml
tests/: test_health.py  test_slots.py  test_trmnl_endpoint.py
